--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -1,58 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_weight="1"
-        android:text="로그인"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:background="@drawable/radius_border"/>
-
-    <EditText
-        android:id="@+id/user_id"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:hint="아이디"
-        android:inputType="textPersonName" />
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/user_pw"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_weight="1"
+            android:text="로그인"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:background="@drawable/radius_border"/>
+
+        <EditText
+            android:id="@+id/user_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="아이디"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/user_pw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="비밀번호"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/log_in_btn"
+            android:layout_width="401dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="로그인 하기" />
+
+        <Button
+            android:id="@+id/gotosignup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="회원가입 화면으로 이동" />
+
+        <Button
+            android:id="@+id/gotoPasswordResetBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="비밀번호 재설정" />
+
+    </LinearLayout>
+
+    <include
+        layout="@layout/view_loader"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:ems="10"
-        android:hint="비밀번호"
-        android:inputType="textPersonName" />
+        android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/log_in_btn"
-        android:layout_width="401dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="로그인 하기" />
-
-    <Button
-        android:id="@+id/gotosignup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="회원가입 화면으로 이동" />
-
-    <Button
-        android:id="@+id/gotoPasswordResetBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="비밀번호 재설정" />
-
-</LinearLayout>
+</RelativeLayout>
